@@ -23,17 +23,17 @@
 // Module file name
 static const char* MFILE = "SPVM/IO/Socket.c";
 
-int32_t SPNATIVE__SPVM__IO__Socket__close(SPVM_ENV* env, SPVM_VALUE* stack) {
+int32_t SPNATIVE__SPVM__IO__ClientSocketTCP__close(SPVM_ENV* env, SPVM_VALUE* stack) {
   
   void* obj_socket = stack[0].oval;
   
   int32_t handle;
-  SPVM_IFIELD(env, handle, obj_socket, "SPVM::IO::Socket", "handle", MFILE, __LINE__);
+  SPVM_IFIELD(env, handle, obj_socket, "SPVM::IO::ClientSocketTCP", "handle", MFILE, __LINE__);
   
   if (handle >= 0) {
     int32_t ret = closesocket(handle);
     if (ret == 0) {
-      SPVM_SET_IFIELD(env, obj_socket, "SPVM::IO::Socket", "handle", -1, MFILE, __LINE__);
+      SPVM_SET_IFIELD(env, obj_socket, "SPVM::IO::ClientSocketTCP", "handle", -1, MFILE, __LINE__);
     }
     else {
       SPVM_DIE("Fail close", MFILE, __LINE__);
@@ -43,21 +43,21 @@ int32_t SPNATIVE__SPVM__IO__Socket__close(SPVM_ENV* env, SPVM_VALUE* stack) {
   return SPVM_SUCCESS;
 }
 
-int32_t SPNATIVE__SPVM__IO__Socket__fileno(SPVM_ENV* env, SPVM_VALUE* stack) {
+int32_t SPNATIVE__SPVM__IO__ClientSocketTCP__fileno(SPVM_ENV* env, SPVM_VALUE* stack) {
   // Self
   void* obj_self = stack[0].oval;
   if (!obj_self) { SPVM_DIE("Self must be defined", MFILE, __LINE__); }
   
   // File fh
   int32_t handle;
-  SPVM_IFIELD(env, handle, obj_self, "SPVM::IO::Socket", "handle", MFILE, __LINE__);
+  SPVM_IFIELD(env, handle, obj_self, "SPVM::IO::ClientSocketTCP", "handle", MFILE, __LINE__);
   
   stack[0].ival = handle;
 
   return SPVM_SUCCESS;
 }
 
-int32_t SPNATIVE__SPVM__IO__Socket__new(SPVM_ENV* env, SPVM_VALUE* stack) {
+int32_t SPNATIVE__SPVM__IO__ClientSocketTCP__new(SPVM_ENV* env, SPVM_VALUE* stack) {
 
 #ifdef _WIN32
   WSADATA wsa;
@@ -109,26 +109,26 @@ int32_t SPNATIVE__SPVM__IO__Socket__new(SPVM_ENV* env, SPVM_VALUE* stack) {
     SPVM_DIE("Can't connect to HTTP server : %s:%d", deststr, port, MFILE, __LINE__);
   }
   
-  // Create SPVM::IO::Socket object
+  // Create SPVM::IO::ClientSocketTCP object
   void* obj_socket;
-  SPVM_NEW_OBJ(env, obj_socket, "SPVM::IO::Socket", MFILE, __LINE__);
+  SPVM_NEW_OBJ(env, obj_socket, "SPVM::IO::ClientSocketTCP", MFILE, __LINE__);
   
   // Set handle
-  SPVM_SET_IFIELD(env, obj_socket, "SPVM::IO::Socket", "handle", handle, MFILE, __LINE__);
+  SPVM_SET_IFIELD(env, obj_socket, "SPVM::IO::ClientSocketTCP", "handle", handle, MFILE, __LINE__);
   
   stack[0].oval = obj_socket;
   
   return SPVM_SUCCESS;
 }
 
-int32_t SPNATIVE__SPVM__IO__Socket__write(SPVM_ENV* env, SPVM_VALUE* stack) {
+int32_t SPNATIVE__SPVM__IO__ClientSocketTCP__write(SPVM_ENV* env, SPVM_VALUE* stack) {
   void* obj_socket = stack[0].oval;
   void* obj_buffer = stack[1].oval;
   const char* buffer = (const char*)env->belems(env, obj_buffer);
   int32_t length = stack[2].ival;
   
   int32_t handle;
-  SPVM_IFIELD(env, handle, obj_socket, "SPVM::IO::Socket", "handle", MFILE, __LINE__);
+  SPVM_IFIELD(env, handle, obj_socket, "SPVM::IO::ClientSocketTCP", "handle", MFILE, __LINE__);
   
   if (handle < 0) {
     SPVM_DIE("Handle is closed", MFILE, __LINE__);
@@ -146,14 +146,14 @@ int32_t SPNATIVE__SPVM__IO__Socket__write(SPVM_ENV* env, SPVM_VALUE* stack) {
   return SPVM_SUCCESS;
 }
 
-int32_t SPNATIVE__SPVM__IO__Socket__read(SPVM_ENV* env, SPVM_VALUE* stack) {
+int32_t SPNATIVE__SPVM__IO__ClientSocketTCP__read(SPVM_ENV* env, SPVM_VALUE* stack) {
   void* obj_socket = stack[0].oval;
   void* obj_buffer = stack[1].oval;
   const char* buffer = (const char*)env->belems(env, obj_buffer);
   int32_t length = env->len(env, obj_buffer);
   
   int32_t handle;
-  SPVM_IFIELD(env, handle, obj_socket, "SPVM::IO::Socket", "handle", MFILE, __LINE__);
+  SPVM_IFIELD(env, handle, obj_socket, "SPVM::IO::ClientSocketTCP", "handle", MFILE, __LINE__);
 
   if (handle < 0) {
     SPVM_DIE("Handle is closed", MFILE, __LINE__);
