@@ -1,8 +1,8 @@
-package SPVM::IO::Socket {
+package SPVM::IO::ClientSocketTCP {
   
   has handle : int;
   
-  native sub new : SPVM::IO::Socket ($host : string, $port : int);
+  native sub new : SPVM::IO::ClientSocketTCP ($host : string, $port : int);
   native sub read : int ($self : self, $buffer : byte[]);
   native sub write : int ($self : self, $buffer : string, $legnth : int);
   native sub close : void ($self : self);
